jwt_demo/require-jwt-group.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: [ "testing@secure.istio.io/testing@secure.istio.io" ]
      when:
        - key: request.auth.claims[groups]
          values: [ "group1" ]
